--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,7 @@ Version: 0.1
 @import 'layout/header';
 @import 'layout/content';
 @import 'layout/list';
+@import 'layout/table';
 @import 'layout/formular';
 @import 'layout/aside';
 //----------------------------------------------------- Temp Files -----------------------------------------------------
