--- a/assets/css/layout/content.scss
+++ b/assets/css/layout/content.scss
@@ -667,7 +667,7 @@
 
   @include breakpoint(md) {
     padding : 5rem 0;
-    }
+  }
 
   > * {
     margin : 0;
@@ -700,6 +700,97 @@
     }
   }
 
+}
+/* Leistungen */
+.pageTitle {
+  display          : flex;
+  background-color : #6cc2cd;
+  padding          : 2rem 0;
+  margin-bottom    : rem(120px)*0.6;
+
+  .wrap {
+    width     : 100%;
+    max-width : $template-width;
+    padding   : 0 $gap;
+    margin    : 0 auto;
+  }
+  .text {
+    font-family     : $title-font;
+    text-shadow     : rgba(0, 0, 0, 30%) 1px 1px 1px;
+    flex            : 1;
+    display         : flex;
+    align-content   : center;
+    align-items     : center;
+    justify-content : center;
+    justify-items   : center;
+
+    h1 {
+      text-align  : center;
+      font-size   : rem(48px);
+      line-height : 100%;
+      color       : #162030;
+      margin      : 0;
+
+      span {
+        color     : $light;
+        font-size : rem(48px)*0.6;
+      }
+    }
+  }
+  .image {
+    display : none;
+  }
+
+  @include breakpoint(md) {
+    margin-bottom : rem(120px);
+    height        : 100vh;
+    max-height    : rem(275px);
+    padding       : 0.2rem 0;
+
+    .wrap {
+      display : flex;
+    }
+
+    .text {
+      justify-content : flex-start;
+      justify-items   : flex-start;
+
+      h1 {
+        text-align  : left;
+        font-size   : rem(80px);
+        line-height : 80%;
+
+        span {
+          font-size : rem(80px)*0.5;
+        }
+      }
+    }
+    .image {
+      display         : flex;
+      flex            : 1;
+      flex-flow       : column;
+      justify-items   : center;
+      justify-content : center;
+      align-items     : center;
+      align-content   : center;
+      img {
+        flex       : 1 0 100%;
+        max-height : 80%;
+      }
+
+    }
+  }
+
+}
+ul.leistungen {
+  column-count: 1;
+  width: 100%;
+  max-width: $template-width;
+  padding: 0 $gap;
+  
+  @include breakpoint(md) {
+    column-count : 2;
+  }
 }
 /*=================================================================================================================================================================================================
                                                                                             Global Classes
