--- a/assets/css/layout/list.scss
+++ b/assets/css/layout/list.scss
@@ -45,3 +45,31 @@
 
 
 }
+
+.listStyle-2 {
+  list-style: none;
+  i {
+    margin-right: rem(12px);
+    color: $color-1;
+  }
+
+  li {
+    display: flex;
+    flex-flow: row;
+    margin-bottom: 0.5rem;
+    font-size: rem(16px);
+    line-height: rem(16px + 7px);
+
+    &:before {
+      content: '\f046';
+      font-family: $icon-font;
+      color: $color-1;
+      display: inline-block;
+      margin-right: 0.5rem;
+
+    }
+  }
+
+
+
+}
