--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,5 @@
-      write ../../style.css
-      write ../../style.css.map
+DEPRECATION WARNING: Passing a percentage as the alpha value to rgba() will be
+interpreted differently in future versions of Sass. For now, use 30 instead.
+
+      write ../../styleNormal.css
+      write ../../styleNormal.css.map
