--- a/assets/css/layout/gridSystem.scss
+++ b/assets/css/layout/gridSystem.scss
@@ -12,7 +12,7 @@
   }
 
   main > &:last-of-type {
-    margin-top: rem(90px);
+    margin-top : rem(90px);
   }
 
   //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -28,13 +28,18 @@
     }
   }
 
+  &.overflowX {
+    overflow-x  : auto !important;
+    display     : block;
+    white-space : nowrap;
+  }
+
   @include breakpoint(xs) {
     justify-content : flex-start;
     .row {
       margin-bottom : rem(120px);
     }
   }
-
   @include breakpoint(md) {
     display   : flex;
     flex-flow : row wrap;
@@ -49,16 +54,14 @@
         margin-bottom : 0 !important;
       }
     }
-
-    &.va {
-      align-items : center;
-    }
-
+  }
+  @include breakpoint(lg) {
+    overflow-x : hidden;
   }
 }
 //=================================================================================================================================================================================================
 .fullRow {
-  margin-bottom: rem(120px);
+  margin-bottom : rem(120px);
 }
 //=================================================================================================================================================================================================
 .col {
